[package]
name = "stair-speedtest"
version = "0.1.0"
description = "Stair Speedtest 桌面版"
authors = ["Stair Speedtest"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stair_speedtest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"] }
tokio = { version = "1", features = ["time", "rt"] }

# 端到端验证 .no_proxy() 是否真的能绕过系统代理(examples/proxy_bypass_check.rs 用)
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

