[package]
name = "stair-speedtest"
version = "0.1.0"
description = "Stair Speedtest 桌面版"
authors = ["Stair Speedtest"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stair_speedtest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"] }
tokio = { version = "1", features = ["time", "rt"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
tauri-plugin-single-instance = "2"

# Windows 任务栏图标修复(WM_SETICON + CreateIconFromResourceEx),仅 Windows 编译。
# 背景:Tauri 2.11.2 的 tauri-codegen 解析 bundle.icon 时只取 ICO 的 entries()[0],
# 我们的 icon.ico 第一个条目是 16x16,被注入到主窗口后任务栏强制上采样到 32/48 就糊了
# (官方 issue #14596 / PR #15241)。修复在 lib.rs 里 setup 时主动给 HWND 重设
# ICON_BIG / ICON_SMALL,需要这套 Win32 API 绑定。
[target."cfg(windows)".dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

# 端到端验证 .no_proxy() 是否真的能绕过系统代理(examples/proxy_bypass_check.rs 用)
[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Release 体积优化:Tauri 主进程不是性能热点(主要工作交给 sidecar 后端),
# 用最激进的体积裁剪即可。预期 stair-speedtest.exe 从 ~14MB 降到 ~4MB。
#  - opt-level="z"     最小化代码大小(比 "s" 更激进,关闭 loop 向量化)
#  - lto="fat"         跨 crate 全程序 LTO,删除全部死代码
#  - codegen-units=1   单单元编译,LTO 才能充分内联/裁剪
#  - strip=true        去掉调试符号(Tauri release 不需要 PDB 解析)
#  - panic="abort"     panic 直接 abort,省掉 unwinding 表
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
